--- a/ProtienTrackerRedis.DAL/ProtienTrackerRedis.DAL.csproj
+++ b/ProtienTrackerRedis.DAL/ProtienTrackerRedis.DAL.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="ListRepository.cs" />
     <Compile Include="RedisRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScoresRepository.cs" />
